# logosphere

./: .gitignore  CLAUDE.md  analyze.py  config-template.json  config.py  emergence.md  emergence.txt  init-template.txt  init_parser.py  logger.py  mind.py  orchestrator.py  pool.py  pyproject.toml  run.py  system.md  test_init_parser.py  test_logger.py  test_mind.py  test_orchestrator.py  test_pool.py  the-goddess.md
.daniel/: ROLE.md  p1.md  p2.md  p3.md
archive/: project.md  secrets.md  the-goddess.md
docs/: draft-dialogue-design.md  embedding-observability-sketch.md  impl-structured-exchange.md  incremental-clustering-design.md  proposal-round-based-windowing.md  proposal-structured-exchange.md  real-time-detection-plan.md  rfc-draft-signal-channel.md  rfc-response.jsonl  rfc-split-pools-v3.md  system_prompt_v1.0.md  system_prompt_v1.2.md  system_prompt_v1.3.md  system_prompt_v1.4.md  unify-display-limits.md  user-presence-protocol.md  vector-db-plan.md  web-chat-context-dump.md  working-memory-reasoner.md
experiments/: attractor-detection.md  baseline.md
hooks/: auditor.py  novelty.py  novelty_content.txt  observer.py  self_report.py
logos-session/: branches.json  interventions.jsonl  notes.md
scripts/: analyze.py  extract_session.py  logos.py  logos_chat.py  migrate_to_logos.py  mind.py  run.py  run_reasoner.py  run_validation_experiment.py  test_realtime.py
src/: config.py
test-session/: branches.json  interventions.jsonl
tests/: test_embeddings_api.py  test_init_parser.py  test_logger.py  test_mind.py  test_orchestrator.py  test_pool.py  (+1 more)
(+79 files in other folders)
